# livehd

./: .bazelignore  .bazelrc  .ccls  .clang-format  .clang-tidy  .codacy.yml  .coveralls.yml  .gitattributes  .gitignore  .gitmodules  .svlint.toml  .travis.yml  AGENT.md  AGENTS.md  BUILD  CITATION.cff  CLAUDE.md  CMakeLists.txt  LICENSE  MODULE.bazel  PYROPE_TEST_CATALOG.md  README.OPTS  README.md  STRUCTURE.md  TODO.html  TODO.md  TODO_hhds.html  TODO_livehd.html  TODO_livehd.md  TODO_mod.html  TODO_prp.html  TODO_prp.md  TODO_verilog.html  TODO_verilog.md  WORKSPACE  add_run.txt  azure-pipelines.yml  bazel-bin  bazel-livehd  bazel-out  (+36 more)
cops/live/: BUILD  BUILD.for_lgraph.0.3  CMakeLists.txt  cops_live.cpp  cops_live.hpp  diff_finder.cpp  diff_finder.hpp  invariant.cpp  invariant.hpp  invariant_finder.cpp  invariant_finder.hpp  invariant_options.cpp  invariant_options.hpp  lginvariant.cpp  lglive.cpp  lglivesynth  lgsetup  lgstitch.cpp  live_common.cpp  live_common.hpp  live_options.cpp  live_options.hpp  stitch_options.cpp  stitch_options.hpp  stitcher.cpp  stitcher.hpp  structural.cpp  structural.hpp
cops/live/tests/: invariant.sh  invariant_stats.cpp
core/tests/: CMakeLists.txt  attribute_test.cpp  blop_test.cpp  char_test.cpp  char_tst.cpp  concurrentqueue.hpp  dense_bench.cpp  dense_test.cpp  dense_tst.cpp  diag_test.cpp  edge.cpp  edge_test.cpp  graph_bench.cpp  graph_core_bench.cpp  graph_core_test.cpp  hashset_test.cpp  hiearchy_test.cpp  hierarchy_test.cpp  iter.cpp  iter_test.cpp  iterator_tst.cpp  lconst_bench.cpp  lconst_test.cpp  lconst_test2.cpp  lgraph_each_test.cpp  lgraph_test.cpp  lgtuple_test.cpp  lhtree_test.cpp  log_test.cpp  mmap_allocator.cpp  mmap_vector.cpp  node_test.cpp  options_tst.cpp  pool_bench.cpp  prep.sh  round_power2_tst.cpp  sample.yaml  small_set_bench.cpp  thread_pool_test.cpp  traversal_hierarchy_test.cpp  (+7 more)
inou/abc/: BUILD  CMakeLists.txt  abc_cell.cpp  abc_cell.hpp  abc_check  docs  dump_aig.cpp  dump_blif.cpp  dump_lgraph.cpp  inou_abc.cpp  inou_abc.hpp  lgaig.cpp  py_inou_abc.hpp
inou/blif/: CMakeLists.txt  inou_blif.cpp  inou_blif.hpp  lgblif.cpp
inou/cfg/: BUILD  CMakeLists.txt  TODO  cfg2dfg.cpp  cfg_lnast.cpp  cfg_lnast.hpp  cfg_node_data.cpp  cfg_node_data.hpp  inou_cfg.cpp  inou_cfg.hpp  lgcfg.cpp  pseudo_algorithm  py_inou_cfg.hpp  test_cfg
inou/cfg/tests/: GEN_CFG.sh  adder_stage.cfg  adder_stage.prp  ast_test.cfg  ast_test.prp  bits_rhs.cfg  bits_rhs.prp  bits_select.prp  bits_tg.cfg  bits_tg.prp  capricious_bits.prp  capricious_bits2.prp  capricious_bits3.prp  capricious_bits4.prp  const.cfg  constant.cfg  constant.prp  constant_neg.cfg  constant_pos.cfg  counter.cfg  counter.prp  counter_nested_if.prp  counter_stage.cfg  counter_stage.prp  fa.cfg  fa.prp  firrtl_bundle_combiner.prp  firrtl_tail.prp  firrtl_tail2.prp  firrtl_tail3.prp  for.cfg  for.prp  funcall.cfg  funcall.prp  funcall2.prp  funcall4.prp  funcall_tupio.cfg  function_call.cfg  gen  gen.sh  (+171 more)
inou/dump/: BUILD  CMakeLists.txt  lgdump.cpp
inou/json/: BUILD  CMakeLists.txt  from_json.cpp  inou_json.cpp  inou_json.hpp  json_composer.cpp  json_composer.hpp  lg_to_yjson.cpp  lg_to_yjson.hpp  lgjson.cpp  to_json.cpp  yosys_json.cpp  yosys_json.hpp
inou/json/tests/: rand_json.sh
inou/lef/: BUILD  CMakeLists.txt  inou_lef.cpp  inou_lef.hpp  lglef.cpp
inou/lefdef/: BUILD  CMakeLists.txt  TODO  def2lg.cpp  def2lg.hpp  defrw.cpp  inou_def.cpp  inou_def.hpp  inou_lefdef.cpp  inou_lefdef.hpp  lef2lg.cpp  lef2lg.hpp  lefdef_json.cpp  lefdef_json.hpp  lefrw.cpp  lglefdef.cpp  lglefdef.hpp  lglefdef_test.cpp
inou/pyrope/: .prp_reconstruct.cpp.kate-swp  BUILD  CMakeLists.txt  Debug  TODO.md  ast_test.cpp  debug  inou_pyrope.cpp  inou_pyrope.hpp  lgpyrope.cpp  output  prp.cpp  prp.hpp  prp_lnast.cpp  prp_lnast.hpp  prp_lnast_test.cpp  prp_reconstruct.cpp  prp_reconstruct.hpp  prp_test.cpp  prp_unit_test.cpp  py_inou_pyrope.hpp
inou/pyrope/old/: inou_pyrope_old.cpp  inou_pyrope_old.hpp
inou/pyrope/tests/: .single_line.prp.kate-swp  Snxn0k.prp  add4.prp  adder_stage.prp  all_ln.prp  array.prp  assertions.prp  assign1.prp  assign2.prp  assign3.prp  assign4.prp  assign5.prp  attr_set.prp  attr_set2.prp  build_temp  bw_overflow.prp  capricious_bits.prp  capricious_bits2.prp  ccounter.prp  chain.prp  cla.prp  clk1.prp  cnt_attr4.prp  codeblock.prp  connect_through.prp  connect_through2.prp  constant_neg.prp  constant_pos.prp  constants.prp  controlflow1.prp  controlflow2.prp  counter.prp  counter_1.prp  counter_tup.prp  (+149 more)
inou/rand/: BUILD  CMakeLists.txt  inou_rand.cpp  inou_rand.hpp  lgrand.cpp  py_inou_rand.hpp
inou/sat/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  docs.txt  inou_sat.cpp  inou_sat.hpp  lgsat  lgsat.cpp  lgsat_1bit.cpp  lgsat_2graphs.cpp  lgsat_march7.cpp  lgsat_multibit.cpp  lgsat_multibit.hpp
inou/tech/: BUILD  CMakeLists.txt  func_liberty_json.rb  func_liberty_json.sh  import_library.cpp  import_library.hpp  import_verilog.cpp  import_verilog.hpp  lib_parser.py  tech_options.hpp  timing_parser.py  verilog.rb  verilog_json.rb
inou/yaml/: CMakeLists.txt  inou_yaml.cpp  inou_yaml.hpp  lgyaml.cpp
inou/yosys/: BUILD  CMakeLists.txt  dump_yosys.cpp  dump_yosys.hpp  inou_yosys.cpp  inou_yosys_api.cpp  inou_yosys_api.hpp  inou_yosys_read.ys  inou_yosys_write.ys  lgcheck  lgyosys  lgyosys_dump.cpp  lgyosys_dump.hpp  lgyosys_fromlg.cpp  lgyosys_tolg.cpp  lgyosys_tolg.hpp  out_yosys.cpp  yosys_driver.cpp
pass/dfg/: BUILD  CMakeLists.txt  Context.hpp  InfInt.hpp  Integer.hpp  Overflow_Pool.hpp  Type.hpp  aux_tree.cpp  aux_tree.hpp  cf2df_state.cpp  cf2df_state.hpp  context.cpp  context.hpp  exception.cpp  exception.hpp  integer.cpp  integer.hpp  lgdfg.cpp  node_creating.cpp  overflow_pool.hpp  parse_constants.cpp  pass_dfg.cpp  pass_dfg.hpp  py_pass_dfg.hpp  symbol_table.cpp  symbol_table.hpp  type.cpp  type.hpp
pass/droute/: CMakeLists.txt  IDEAS  droute.cpp  test1.rb
pass/lgopt/: CMakeLists.txt  lgopt.cpp
pass/lgopt_dce/: CMakeLists.txt  cmake_backup  lgopt_dce.cpp
pass/lgopt_fluid/: CMakeLists.txt  lgopt_fluid.cpp
(+5123 files in other folders)
