# This file is distributed under the BSD 3-Clause License. See LICENSE for details.
module(
    name = "livehd",
    version = "0.2.0",
)

bazel_dep(name = "rules_python", version = "2.0.2")

#python = use_extension("@rules_python//python/extensions:python.bzl", "python")
#python.toolchain(python_version = "3.11")

bazel_dep(name = "bazel_skylib", version = "1.9.0")
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bazel_dep(name = "abseil-cpp", version = "20250814.2") # version = "20240722.1")
bazel_dep(name = "google_benchmark", version = "1.9.5")
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# slang v11.0 (@slang, the direct inou/slang reader) vendors boost_unordered as a
# single header (SLANG_BOOST_SINGLE_HEADER). These boost.* BCR deps are kept only
# for the pinned slang v10.0 (@slang_v10) that @yosys_slang still builds against
# (todo/ 1s, subtask A).
bazel_dep(name = "boost.multiprecision", version = "1.90.0.bcr.1")
bazel_dep(name = "boost.unordered", version = "1.90.0.bcr.1")
#### Flex/Bison
bazel_dep(name = "bison", version = "3.8.2.bcr.5")
bazel_dep(name = "flex", version = "2.6.4.bcr.5")

bazel_dep(name = "rapidjson", version = "1.1.0.bcr.20250205")
bazel_dep(name = "mimalloc", version = "2.2.4.bcr.2")

bazel_dep(name = "libffi", version = "3.4.7.bcr.4")

# iassert
bazel_dep(name = "iassert", version = "0.1.0")
git_override(
    module_name = "iassert",
    remote = "https://github.com/masc-ucsc/iassert.git",
    commit = "b18182f668ff42b0f96c3a1e3e6deee4e6da221f",  # "fix un-initialized access": sigaction sa_mask (todo/ 1s)
)
# For local debug/testing, swap the git_override above for:
# local_path_override(module_name = "iassert", path = "../iassert") # sometimes useful to debug together with iassert patches

# hlop (Dlop value type + slop/dlop execution layer)
bazel_dep(name = "hlop", version = "0.2.0")
git_override(
    module_name = "hlop",
    remote = "https://github.com/masc-ucsc/hlop.git",
    commit = "54f47b3f6b7397db1c732e6de6ddca6c8d7338a0",  # is_i/to_i -> is_just_i64/to_just_i64
)
# For local debug/testing, swap the git_override above for:
# local_path_override(module_name = "hlop", path = "../hlop") # sometimes useful to debug together with hlop patches

# slang (fmt required by slang CMake)
http_archive(
    name = "fmt",
    build_file = "//packages:fmt.BUILD",
    sha256 = "e6a2b43c6ec4779fb53b15b705f7c20b4eb9d5ae35784d610ac6daec30737019",
    strip_prefix = "fmt-12.1.0",  # slang v11.0 requires fmt >= 12.1
    urls = [
        "https://github.com/fmtlib/fmt/archive/refs/tags/12.1.0.zip",
    ],
)

http_archive(
    name = "slang",
    build_file = "//packages:slang.BUILD",
    patches = ["//packages:slang.patch"],
    sha256 = "f33547e9a2d1b21510174f064584aa31efff5a6956dfda4153a21ee878ff90d5",
    strip_prefix = "slang-11.0",
    urls = [
        "https://github.com/MikePopoloski/slang/archive/refs/tags/v11.0.zip",
    ],
)

# fmt 11.1.4 + slang 10.0 pinned for @yosys_slang only (todo/ 1s). yosys-slang
# upstream is written against the v10 slang API; the direct inou/slang reader
# (@slang above) is the one on v11.0.
http_archive(
    name = "fmt_v10",
    build_file = "//packages:fmt.BUILD",
    sha256 = "7e85cbf6125a76daa0f83cd9240eff863d988aca68cd5f66c01ff7b59fa886b6",
    strip_prefix = "fmt-11.1.4",
    urls = [
        "https://github.com/fmtlib/fmt/archive/refs/tags/11.1.4.zip",
    ],
)

http_archive(
    name = "slang_v10",
    build_file = "//packages:slang_v10.BUILD",
    patches = ["//packages:slang_v10.patch"],
    sha256 = "f04fa094e421d7306f817d5411f4de78017e594615e2fb9666b63d22df4188ff",
    strip_prefix = "slang-10.0",
    urls = [
        "https://github.com/MikePopoloski/slang/archive/refs/tags/v10.0.zip",
    ],
)

#### Mockturtle packages

http_archive(
    name = "mockturtle",
    url = "https://github.com/lsils/mockturtle/archive/refs/heads/master.zip",
    strip_prefix = "mockturtle-master",
    build_file = "//packages:mockturtle.BUILD",
)

http_archive(
    name = "kitty",
    url = "https://github.com/msoeken/kitty/archive/refs/heads/master.zip",
    strip_prefix = "kitty-master",
    build_file = "//packages:kitty.BUILD",
)

http_archive(
    name = "parallel_hashmap",
    url = "https://github.com/greg7mdp/parallel-hashmap/archive/refs/heads/master.zip",
    strip_prefix = "parallel-hashmap-master",
    build_file = "//packages:parallel_hashmap.BUILD",
)

# HHDS
bazel_dep(name = "hhds", version = "0.2.0")
git_override(
    module_name = "hhds",
    remote = "https://github.com/masc-ucsc/hhds.git",
    commit = "d31bbde3c166d2d9a70d2cbe4cee2a6c3d7a95f6",  # Source_span/resolve_spans/import_from + render_excerpt (diag reporting)
)
# For local debug/testing, swap the git_override above for:
# local_path_override(module_name = "hhds", path = "../hhds") # sometimes useful for debug together with hhds

# tree-sitter-pyrope
http_archive(
    name = "tree-sitter-pyrope",
    build_file = "//packages:tree-sitter-pyrope.BUILD",
    integrity = "sha256-L18TTHdz0ZA2Y/PWJUZ34JM9xkJHz/qcuA0SRHpU0c4=",
    strip_prefix = "tree-sitter-pyrope-f4b985f09f526c884281af51277f2e13fdcda028",
    urls = ["https://github.com/masc-ucsc/tree-sitter-pyrope/archive/f4b985f09f526c884281af51277f2e13fdcda028.zip",
    ],
)

# tree sitter
http_archive(
    name = "tree-sitter",
    build_file = "//packages:tree-sitter.BUILD",
    sha256 = "1bfd4db2b3a6a4b81058c6a6cfa7fd339e71508c44355c7c8a5034e9b2ad56f1",
    strip_prefix = "tree-sitter-0.25.6",
    urls = [
        "https://github.com/tree-sitter/tree-sitter/archive/refs/tags/v0.25.6.zip",
    ],
)

# OpenTimer
http_archive(
    name = "opentimer",
    build_file = "//packages:opentimer.BUILD",
    patches = ["//packages:opentimer.patch"],
    sha256 = "52791ebff1a4d18d1bb55da5328cf201c41736e278d5f1a4ce0f7410de128b6f",
    strip_prefix = "OpenTimer-5e0d5bba4b9d5725c932a7b42815f7231813b6a5",
    urls = [
        "https://github.com/masc-ucsc/OpenTimer/archive/5e0d5bba4b9d5725c932a7b42815f7231813b6a5.zip",
    ],
)

# Perfetto
http_archive(
    name = "com_google_perfetto",
    build_file = "//packages:perfetto.BUILD",
    sha256 = "c2230d04790eb50231a58616a3f1ff6dcf772d8e220333a7711605f99c5c6db9",
    strip_prefix = "perfetto-50.1/sdk",
    urls = ["https://github.com/google/perfetto/archive/refs/tags/v50.1.tar.gz"],
)

new_git_repository(
    name = "abc",
    build_file = "//packages:abc.BUILD",  # relative to external path
    commit = "57544eb9ca04015120e589b3c80d9edc1e5a8db9",
    patches = ["//packages:abc.patch"],
    remote = "https://github.com/berkeley-abc/abc.git",
    shallow_since = "1554534526 -1000",
)

http_archive(
   name = "yosys_slang",
   urls = [
     "https://github.com/povik/yosys-slang/archive/7cdd147a6dd14e8f57cd321df8be377c04c9b31f.zip"
   ],
   sha256 = "e3cde284d2465b5c435ad4ce897c58eb08ca607b5549e4fca255f566f372bcf3",
   strip_prefix = "yosys-slang-7cdd147a6dd14e8f57cd321df8be377c04c9b31f",
   build_file = "//packages:yosys_slang.BUILD",
   patches = ["//packages:yosys_slang.patch"],
)

http_archive(
   name = "at_clifford_yosys2",
   urls = [
     "https://github.com/YosysHQ/yosys/archive/refs/tags/v0.60.zip",
   ],
   sha256 = "cd2b29bbd3c92e0cdc4df37af3c7b17b965b6ebdb9079377d7e32fdefb4dcd3b",
   strip_prefix = "yosys-0.60",
   build_file = "//packages:yosys.BUILD",
   patches = ["//packages:yosys.patch", "//packages:yosys_lexer.patch"],
)

# mustache
http_archive(
    name = "mustache",
    build_file = "//packages:mustache.BUILD",
    sha256 = "d74b503baedd98a51bf8142355ef9ce55daf2268150e5897f6629f2d0f9205e2",
    strip_prefix = "Mustache-04277d5552c6e46bee41a946b7d175a660ea1b3d",
    urls = [
        "https://github.com/kainjow/Mustache/archive/04277d5552c6e46bee41a946b7d175a660ea1b3d.zip",
    ],
)
